# netflix-api/src/api/swagger/api.yaml
@@ -12,7 +12,8 @@ tags:
     description: Endpoints that can be used by users after login.
   - name: admin
     description: Endpoints for administrative actions.
-
+servers:
+  - url: /netflix
 paths:
   /user:
     post:
@@ -21,7 +22,7 @@ paths:
       summary: Create user
       description: Registers a new user in the system.
       operationId: register
-      x-eov-operation-handler:
+      x-eov-operation-handler: api/controllers/public.controller
       requestBody:
         description: User to create.
         required: true
@@ -52,7 +53,7 @@ paths:
       summary: Logs user into the system
       description: Authenticates a user and creates a new session.
       operationId: login
-      x-eov-operation-handler:
+      x-eov-operation-handler: api/controllers/public.controller
       requestBody:
         description: User to login.
         required: true
@@ -85,7 +86,7 @@ paths:
       summary: Find videos
       description: User can filter videos by title.
       operationId: getVideos
-      x-eov-operation-handler:
+      x-eov-operation-handler: api/controllers/user.controller
       security:
         - userSecurity: []
         - adminSecurity: []
@@ -120,7 +121,7 @@ paths:
       summary: Create video
       description: Creates a new video in the system.
       operationId: createVideo
-      x-eov-operation-handler:
+      x-eov-operation-handler: api/controllers/admin.controller
       security:
         - adminSecurity: []
       requestBody:
@@ -153,7 +154,7 @@ paths:
       summary: Update video
       description: Updates an existing video identified by its ID.
       operationId: updateVideo
-      x-eov-operation-handler:
+      x-eov-operation-handler: api/controllers/admin.controller
       security:
         - adminSecurity: []
       parameters:
@@ -194,7 +195,7 @@ paths:
       summary: Delete video
       description: Deletes an existing video identified by its ID.
       operationId: deleteVideo
-      x-eov-operation-handler:
+      x-eov-operation-handler: api/controllers/admin.controller
       security:
         - adminSecurity: []
       parameters:
@@ -223,7 +224,7 @@ paths:
       summary: Add video to queue
       description: Adds a video to the authenticated user's queue.
       operationId: addVideoToQueue
-      x-eov-operation-handler:
+      x-eov-operation-handler: api/controllers/user.controller
       security:
         - userSecurity: []
       requestBody:
@@ -232,8 +233,13 @@ paths:
         content:
           application/json:
             schema:
-              type: string
-              description: The unique identifier of the video to add to the queue.
+              type: object
+              required:
+                - videoId
+              properties:
+                videoId:
+                  type: number
+                  description: The unique identifier of the video to add to the queue.
       responses:
         "201":
           description: Successfully added video to queue.
@@ -261,7 +267,7 @@ paths:
       summary: Get user queue
       description: Returns the videos in the authenticated user's queue.
       operationId: getQueue
-      x-eov-operation-handler:
+      x-eov-operation-handler: api/controllers/user.controller
       security:
         - userSecurity: []
       parameters:
@@ -300,7 +306,7 @@ paths:
       summary: Logs out user
       description: Ends the authenticated user's current session.
       operationId: logout
-      x-eov-operation-handler:
+      x-eov-operation-handler: api/controllers/user.controller
       security:
         - userSecurity: []
       responses:
@@ -341,6 +347,7 @@ components:
         - lastName
         - email
         - password
+      additionalProperties: false
       properties:
         id:
           readOnly: true
@@ -369,6 +376,7 @@ components:
       required:
         - password
         - username
+      additionalProperties: false
       properties:
         username:
           type: string
@@ -381,6 +389,7 @@ components:
       title: VideoBase
       description: Common properties of a video.
       type: object
+      additionalProperties: false
       properties:
         id:
           readOnly: true
@@ -416,6 +425,9 @@ components:
       allOf:
         - $ref: "#/components/schemas/VideoBase"
         - type: object
+          properties:
+            id:
+              readOnly: true
           required:
             - id
             - title
